--- a/booking/src/AppBundle/Resources/translations/messages.en.xlf
+++ b/booking/src/AppBundle/Resources/translations/messages.en.xlf
@@ -10,6 +10,10 @@
                 <source>Hello %name%</source>
                 <target>Hello %name%</target>
             </trans-unit>
+            <trans-unit id="foo_with_html_tags">
+                <source><![CDATA[<strong>foo</strong>]]></source>
+                <target><![CDATA[<strong>The foo</strong>]]></target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
